--- a/Capstone1.ipynb
+++ b/Capstone1.ipynb
@@ -4736,6 +4736,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save more info\n",
+    "with open('trace_manh2.pkl','wb') as f2:\n",
+    "    pickle.dump({'model': model, 'trace': trace, 'X_shared': X_shared}, f2)\n",
+    "\n",
+    "with open('trace_manh2.pkl', 'rb') as f2:\n",
+    "    data2 = pickle.load(f2)\n",
+    "\n",
+    "model2 = data2['model']\n",
+    "trace2 = data2['trace']\n",
+    "X_shared2 = data2['X_shared']\n",
+    "\n",
+    "#X_shared2.set_value(np.asarray(X, theano.config.floatX))    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # try to use another command to save trace and plot it\n",
+    "tname=pm.save_trace(trace)\n",
+    "with model:\n",
+    "    trace1=pm.load_trace(tname)\n",
+    "#pm.traceplot(trace1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# define function to apply pymc3 model to all boroughs\n",
     "def gamma_par(data):\n",
     "\n",
